--- a/temporary_pofol/index.html
+++ b/temporary_pofol/index.html
@@ -7,13 +7,14 @@
   <title>Temporary Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
   <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/swiper.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header id="header">
     <div class="container">
       <nav>
-        <button class="nav-btn">
+        <button class="nav-btn" id="navBtn">
           <span></span>
           <span></span>
           <span></span>
@@ -25,6 +26,14 @@
     <!-- <div class="main-bg">
       <img src="images/background.jpg" alt="background">
     </div> -->
+    <div class="pop">
+      <a href="javascript:;" class="pop-close" id="popClose"><i class="xi-close"></i></a>
+      <div class="pop-txt">
+        <strong>안내드립니다.</strong>
+        <p>해당 사이트는 개인 포트폴리오 전용</p>
+        <p>비영리 목적의 웹사이트입니다.</p>
+      </div>
+    </div>
     <div class="container">
       <div class="main-txt">
         <h1>Portfolio</h1>
@@ -35,14 +44,33 @@
   <section id="intro">
     <div class="container">
       <h2>Intro</h2>
-      <div class="cont-wrap">
-        <div class="intro-cont">
-          <div class="cont-img"></div>
-          <div class="cont-txt">
-            <h3>I am</h3>
-            <p>웹디자이너 & 웹퍼블리셔</p>
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="intro-cont swiper-slide">
+            <div class="cont-img"></div>
+            <div class="cont-txt">
+              <h3>I am</h3>
+              <p>웹디자이너 &amp; 웹퍼블리셔</p>
+            </div>
+          </div>
+          <div class="intro-cont swiper-slide">
+            <div class="cont-img"></div>
+            <div class="cont-txt">
+              <h3>Career</h3>
+              <p>티몬 컨텐츠디자이너 / 하이미디어 웹디자인 &amp; 웹퍼블리싱 강사</p>
+            </div>
+          </div>
+          <div class="intro-cont swiper-slide">
+            <div class="cont-img"></div>
+            <div class="cont-txt">
+              <h3>Coments</h3>
+              <p>도전을 두려워하지 않는 사람</p>
+            </div>
           </div>
         </div>
+        <!-- Add Arrows -->
+      <div class="swiper-button-next slide-btn"></div>
+      <div class="swiper-button-prev slide-btn"></div>
       </div>
     </div>
   </section>
@@ -109,7 +137,7 @@
           <div class="icon">
             <i class="xi-call"></i>
           </div>
-          <p>010-23236-6929</p>
+          <p>010-2323-6929</p>
         </div>
         <div class="contact-cont">
           <div class="icon">
@@ -126,5 +154,16 @@
       </div>
     </div>
   </section>
+
+  <script src="js/swiper.min.js"></script>
+  <script src="js/script.js"></script>
+  <script>
+    var swiper = new Swiper('.swiper-container', {
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+    });
+  </script>
 </body>
 </html>
