contact, 기타간격수정

--- a/temporary_pofol/index.html
+++ b/temporary_pofol/index.html
@@ -159,6 +159,7 @@
             <i class="xi-save"></i>
           </div>
           <p>https://github.com/bigblackbean/profile</p>
+          <p class="drive">github바로가기</p>
         </div>
       </div>
     </div>
@@ -190,7 +191,7 @@
         }
       }
     });
-    
+
   </script>
 </body>
 </html>
