--- a/temporary_pofol/index.html
+++ b/temporary_pofol/index.html
@@ -81,16 +81,25 @@
       <h2>About Me</h2>
       <div class="about-wrap">
         <div class="about-cont">
-          <div class="cont-img">
-          </div>
+          <div class="cont-img"></div>
+          <h4>Introduce</h4>
+          <p>1900.00.00</p>
+          <p>잔병치레없이 건강한편</p>
+          <p>좋아하는색은 핑크</p>
         </div>
         <div class="about-cont">
-          <div class="cont-img">
-          </div>
+          <div class="cont-img"></div>
+          <h4>Skills</h4>
+          <p>HTML5, CSS3, JavaScript, jQeury, Bootstrap</p>
+          <p>Photoshop, Illustrator, XD</p>
         </div>
         <div class="about-cont">
-          <div class="cont-img">
-          </div>
+          <div class="cont-img"></div>
+          <h4>Character</h4>
+          <p>맡은일은끝까지</p>
+          <p>둥글게둥글게 함께</p>
+          <p>새로운것도언제나환영</p>
+          <p>ISFJ 용감한 수호자</p>
         </div>
       </div>
     </div>
@@ -112,6 +121,7 @@
             <h3>Study Group</h3>
             <p>스터디 그룹 운영</p>
             <p>60여명 활동</p>
+            <a href="images/cos_guide.pdf" target="_blank">활동가이드 보기</a>
           </div>
           <div class="cont-img"></div>
         </div>
