--- a/temporary_pofol/index.html
+++ b/temporary_pofol/index.html
@@ -12,15 +12,23 @@
 </head>
 <body>
   <header id="header">
-    <div class="container">
-      <nav>
-        <button class="nav-btn" id="navBtn">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-      </nav>
-    </div>
+    <nav>
+      <div class="container">
+          <button class="nav-btn" id="navBtn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+      </div>
+      <div class="navi">
+        <ul>
+          <li><a href="#main">main<span></span></a></li>
+          <li><a href="#intro">intro<span></span></a></li>
+          <li><a href="#pofol">portfolio<span></span></a></li>
+          <li><a href="#contact">contact<span></span></a></li>
+        </ul>
+      </div>
+    </nav>
   </header>
   <section id="main">
     <!-- <div class="main-bg">
@@ -137,19 +145,19 @@
                 <a href="http://guning.co.kr/" target="_blank"><img src="images/student-pofol-01.jpg" alt="강혜련포트폴리오"></a>
               </div>
               <div class="cont-slide-img swiper-slide">
-                <a href="http://guning.co.kr/" target="_blank"><img src="images/student-pofol-02.jpg" alt="최송이포트폴리오"></a>
+                <a href="https://sssong2.github.io/portfolio/" target="_blank"><img src="images/student-pofol-02.jpg" alt="최송이포트폴리오"></a>
               </div>
               <div class="cont-slide-img swiper-slide">
-                <a href="http://guning.co.kr/" target="_blank"><img src="images/student-pofol-03.jpg" alt="윤기쁨포트폴리오"></a>
+                <a href="http://zoyland.net/" target="_blank"><img src="images/student-pofol-03.jpg" alt="윤기쁨포트폴리오"></a>
               </div>
               <div class="cont-slide-img swiper-slide">
-                <a href="http://guning.co.kr/" target="_blank"><img src="images/student-pofol-04.jpg" alt="박주희포트폴리오"></a>
+                <a href="https://wxvvk123.github.io/juhee_portfoilo/" target="_blank"><img src="images/student-pofol-04.jpg" alt="박주희포트폴리오"></a>
               </div>
               <div class="cont-slide-img swiper-slide">
-                <a href="http://guning.co.kr/" target="_blank"><img src="images/student-pofol-05.jpg" alt="유인용포트폴리"></a>
+                <a href="https://amanda-yoo.github.io/Portfolio/yoo" target="_blank"><img src="images/student-pofol-05.jpg" alt="유인용포트폴리"></a>
               </div>
               <div class="cont-slide-img swiper-slide">
-                <a href="http://guning.co.kr/" target="_blank"><img src="images/student-pofol-06.jpg" alt="서일포트폴리오"></a>
+                <a href="https://seoil86.github.io/portfolio/" target="_blank"><img src="images/student-pofol-06.jpg" alt="서일포트폴리오"></a>
               </div>
               <div class="cont-slide-img swiper-slide">
                 <a href="" target="_blank"><img src="images/student-pofol-07.jpg" alt=""></a>
