--- a/temporary_pofol/index.html
+++ b/temporary_pofol/index.html
@@ -89,25 +89,37 @@
       <h2>About Me</h2>
       <div class="about-wrap">
         <div class="about-cont">
-          <div class="cont-img"></div>
-          <h4>Introduce</h4>
-          <p>1900.00.00</p>
-          <p>잔병치레없이 건강한편</p>
-          <p>좋아하는색은 핑크</p>
+          <div class="cont-img">
+            <h4>Introduce</h4>
+          </div>
+          <div class="cont-txt">
+            <i class="xi-emoticon-smiley-o"></i>
+            <p>1991.07.05</p>
+            <p>잔병치레없이 건강한편</p>
+            <p>좋아하는색은 핑크</p>
+          </div>
         </div>
         <div class="about-cont">
-          <div class="cont-img"></div>
-          <h4>Skills</h4>
-          <p>HTML5, CSS3, JavaScript, jQeury, Bootstrap</p>
-          <p>Photoshop, Illustrator, XD</p>
+          <div class="cont-img">
+            <h4>Skills</h4>
+          </div>
+          <div class="cont-txt">
+            <i class="xi-photoshop-circle"></i>
+            <p>HTML5, CSS3, JavaScript, jQeury, Bootstrap</p>
+            <p>Photoshop, Illustrator, XD</p>
+          </div>
         </div>
         <div class="about-cont">
-          <div class="cont-img"></div>
-          <h4>Character</h4>
-          <p>맡은일은끝까지</p>
-          <p>둥글게둥글게 함께</p>
-          <p>새로운것도언제나환영</p>
-          <p>ISFJ 용감한 수호자</p>
+          <div class="cont-img">
+            <h4>Character</h4>
+          </div>
+          <div class="cont-txt">
+            <i class="xi-run"></i>
+            <p>맡은일은끝까지</p>
+            <p>둥글게둥글게 함께</p>
+            <p>새로운것도언제나환영</p>
+            <p>ISFJ 용감한 수호자</p>
+          </div>
         </div>
       </div>
     </div>
@@ -190,7 +202,7 @@
           <div class="icon">
             <i class="xi-save"></i>
           </div>
-          <p>https://github.com/bigblackbean/profile</p>
+          <p>https://github.com/bigblackbean </p>
           <p class="drive">github바로가기</p>
         </div>
       </div>
