--- a/temporary_pofol/index.html
+++ b/temporary_pofol/index.html
@@ -89,31 +89,31 @@
       <h2>About Me</h2>
       <div class="about-wrap">
         <div class="about-cont">
-          <div class="cont-img">
+          <div class="cont-front">
             <h4>Introduce</h4>
           </div>
-          <div class="cont-txt">
+          <div class="cont-back">
             <i class="xi-emoticon-smiley-o"></i>
             <p>1991.07.05</p>
-            <p>잔병치레없이 건강한편</p>
-            <p>좋아하는색은 핑크</p>
+            <p>커뮤니케이션 능력</p>
+            <p>불통보단 소통</p>
           </div>
         </div>
         <div class="about-cont">
-          <div class="cont-img">
+          <div class="cont-front">
             <h4>Skills</h4>
           </div>
-          <div class="cont-txt">
+          <div class="cont-back">
             <i class="xi-photoshop-circle"></i>
             <p>HTML5, CSS3, JavaScript, jQeury, Bootstrap</p>
             <p>Photoshop, Illustrator, XD</p>
           </div>
         </div>
         <div class="about-cont">
-          <div class="cont-img">
+          <div class="cont-front">
             <h4>Character</h4>
           </div>
-          <div class="cont-txt">
+          <div class="cont-back">
             <i class="xi-run"></i>
             <p>맡은일은끝까지</p>
             <p>둥글게둥글게 함께</p>
