--- a/temporary_pofol/contents_design.html
+++ b/temporary_pofol/contents_design.html
@@ -22,8 +22,8 @@
       </div>
       <div class="navi">
         <ul>
-          <li><a href="#main">main<span></span></a></li>
-          <li><a href="#intro">intro<span></span></a></li>
+          <li><a href="index.html">main<span></span></a></li>
+          <li><a href="#cd">contents design<span></span></a></li>
           <li><a href="#pofol">portfolio<span></span></a></li>
           <li><a href="#contact">contact<span></span></a></li>
         </ul>
@@ -48,26 +48,126 @@
               <div class="cont-txt">
                 <h4>하나투어 서브프로모션</h4>
                 <p>일러스트 소스와 '갑자기 툭 튀어나온'이라는 문구를 살려 입체적인 표현을 위주로 진행한 작업</p>
+                <a href="images/promotion_full_01.jpg">페이지 전체보기</a>
+              </div>
+            </div>
+            <div class="cd-cont swiper-slide">
+              <div class="cont-img">
+                <img src="images/promotion_thumnail_02.png" alt="">
+              </div>
+              <div class="cont-txt">
+                <h4>중동의 뉴욕 두바이 여행</h4>
+                <p>두바이의 찬란한 건물을 보여주는 이미지와 럭셔리, 황금빛 등의 키워드 요청을 위주로 표현</p>
                 <a href="">페이지 전체보기</a>
               </div>
             </div>
             <div class="cd-cont swiper-slide">
               <div class="cont-img">
-                <img src="images/promotion_thumnail_01.png" alt="">
+                <img src="images/promotion_thumnail_03.png" alt="">
               </div>
               <div class="cont-txt">
-                <h4>하나투어 서브프로모션</h4>
-                <p>일러스트 소스와 '갑자기 툭 튀어나온'이라는 문구를 살려 입체적인 표현을 위주로 진행한 작업</p>
+                <h4>하나투어 BEST 여행지 프로모션</h4>
+                <p>해당월 한정 세일, 추가 카드할인 등 할인혜택이 돋보이는 요청에 따라 강조하여 제작</p>
                 <a href="">페이지 전체보기</a>
               </div>
             </div>
             <div class="cd-cont swiper-slide">
               <div class="cont-img">
-                <img src="images/promotion_thumnail_01.png" alt="">
+                <img src="images/promotion_thumnail_04.png" alt="">
               </div>
               <div class="cont-txt">
-                <h4>하나투어 서브프로모션</h4>
-                <p>일러스트 소스와 '갑자기 툭 튀어나온'이라는 문구를 살려 입체적인 표현을 위주로 진행한 작업</p>
+                <h4>실시간 국내선 프로모션</h4>
+                <p>황금색, 돼지, 동전 등을 이용해서 밝은 느낌으로 요청한 디자인에 맞춰 제작</p>
+                <a href="">페이지 전체보기</a>
+              </div>
+            </div>
+            <div class="cd-cont swiper-slide">
+              <div class="cont-img">
+                <img src="images/promotion_thumnail_05.png" alt="">
+              </div>
+              <div class="cont-txt">
+                <h4>해외항공권 전사 기획전</h4>
+                <p>기존과 동일한 컨셉을 원했지만 변화를 주고 싶어서 네온사인효과를 이용한 디자인으로 제작</p>
+                <a href="">페이지 전체보기</a>
+              </div>
+            </div>
+            <div class="cd-cont swiper-slide">
+              <div class="cont-img">
+                <img src="images/promotion_thumnail_06.png" alt="">
+              </div>
+              <div class="cont-txt">
+                <h4>제주 게스트하우스 완벽 가이드</h4>
+                <p>봄 시즌에 맞는 제주도의 풍경을 바탕으로 혼행족과 커플들 모두 자유롭게 여행할 수 있는 컨셉으로 디자인</p>
+                <a href="">페이지 전체보기</a>
+              </div>
+            </div>
+            <div class="cd-cont swiper-slide">
+              <div class="cont-img">
+                <img src="images/promotion_thumnail_07.png" alt="">
+              </div>
+              <div class="cont-txt">
+                <h4>3월 투어 전체 기획전</h4>
+                <p>봄을 맞이한 3월에 벚꽃을 이용해 밝은 봄의 분위기를 연출해서 제작</p>
+                <a href="">페이지 전체보기</a>
+              </div>
+            </div>
+            <div class="cd-cont swiper-slide">
+              <div class="cont-img">
+                <img src="images/promotion_thumnail_08.png" alt="">
+              </div>
+              <div class="cont-txt">
+                <h4>제주 스팟항공권 타임찬스 딜 기획전</h4>
+                <p>항공기 이미지와 타임찬스라는 문구를 강조하도록 요청하여 시계아이콘을 이용해서 제작</p>
+                <a href="">페이지 전체보기</a>
+              </div>
+            </div>
+            <div class="cd-cont swiper-slide">
+              <div class="cont-img">
+                <img src="images/promotion_thumnail_09.png" alt="">
+              </div>
+              <div class="cont-txt">
+                <h4>인터파크 발권수수료 무료 프로모션</h4>
+                <p>일러스트 소스에 만화같으면서도 입체적인 타이포그래피 디자인을 요청하여 제작</p>
+                <a href="">페이지 전체보기</a>
+              </div>
+            </div>
+            <div class="cd-cont swiper-slide">
+              <div class="cont-img">
+                <img src="images/promotion_thumnail_10.png" alt="">
+              </div>
+              <div class="cont-txt">
+                <h4>부킹닷컴 프로모션</h4>
+                <p>부킹닷컴 한정호텔의 혜택을 강조하기 위해 호텔 안 느낌의 배경으로 분위기를 조성하여 제작</p>
+                <a href="">페이지 전체보기</a>
+              </div>
+            </div>
+            <div class="cd-cont swiper-slide">
+              <div class="cont-img">
+                <img src="images/promotion_thumnail_11.png" alt="">
+              </div>
+              <div class="cont-txt">
+                <h4>국내호텔 성수기 기획전</h4>
+                <p>프로듀스 101 컨셉을 벤치마킹하여 프로호텔 101로 변경하여 제작</p>
+                <a href="">페이지 전체보기</a>
+              </div>
+            </div>
+            <div class="cd-cont swiper-slide">
+              <div class="cont-img">
+                <img src="images/promotion_thumnail_12.png" alt="">
+              </div>
+              <div class="cont-txt">
+                <h4>여름휴가 항공권 특가</h4>
+                <p>여름휴가에 맞는 청량함을 주기위한 바다느낌을 위주로 디자인. 그래프로 저렴한 항공권임을 강조</p>
+                <a href="">페이지 전체보기</a>
+              </div>
+            </div>
+            <div class="cd-cont swiper-slide">
+              <div class="cont-img">
+                <img src="images/promotion_thumnail_13.png" alt="">
+              </div>
+              <div class="cont-txt">
+                <h4>모두투어 이스타항공 특가 기획전</h4>
+                <p>휴양지 느낌을 일러스트 소스로 깔끔하게 표현해주길 요청하여 제작</p>
                 <a href="">페이지 전체보기</a>
               </div>
             </div>
@@ -95,26 +195,7 @@
                 <a href="">페이지 전체보기</a>
               </div>
             </div>
-            <div class="cd-cont swiper-slide">
-              <div class="cont-img">
-                <img src="images/promotion_thumnail_01.png" alt="">
-              </div>
-              <div class="cont-txt">
-                <h4>하나투어 서브프로모션</h4>
-                <p>일러스트 소스와 '갑자기 툭 튀어나온'이라는 문구를 살려 입체적인 표현을 위주로 진행한 작업</p>
-                <a href="">페이지 전체보기</a>
-              </div>
-            </div>
-            <div class="cd-cont swiper-slide">
-              <div class="cont-img">
-                <img src="images/promotion_thumnail_01.png" alt="">
-              </div>
-              <div class="cont-txt">
-                <h4>하나투어 서브프로모션</h4>
-                <p>일러스트 소스와 '갑자기 툭 튀어나온'이라는 문구를 살려 입체적인 표현을 위주로 진행한 작업</p>
-                <a href="">페이지 전체보기</a>
-              </div>
-            </div>
+
           </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
