--- a/temporary_pofol/index.html
+++ b/temporary_pofol/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
   </section>
-  <section id="intro">
+  <section id="intro" class="section">
     <div class="container">
       <h2>Intro</h2>
       <div class="intro-slider swiper-container">
@@ -84,7 +84,7 @@
       </div>
     </div>
   </section>
-  <section id="about">
+  <section id="about" class="section">
     <div class="container">
       <h2>About Me</h2>
       <div class="about-wrap">
@@ -124,7 +124,7 @@
       </div>
     </div>
   </section>
-  <section id="pofol">
+  <section id="pofol" class="section">
     <div class="container">
       <h2>Portfolio</h2>
       <div class="pofol-wrap">
@@ -134,6 +134,7 @@
             <h3>Contents Design</h3>
             <p>프로모션 페이지</p>
             <p>상세 페이지</p>
+            <a href="contents_design.html" target="_blank">작업물 보기</a>
           </div>
         </div>
         <div class="pofol-cont sd">
@@ -182,7 +183,7 @@
       </div>
     </div>
   </section>
-  <section id="contact">
+  <footer id="contact" class="section">
     <div class="container">
       <h2>Contact</h2>
       <div class="contact-wrap">
@@ -207,7 +208,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </footer>
 
   <script src="js/swiper.min.js"></script>
   <script src="js/script.js"></script>
