--- a/temporary_pofol/index.html
+++ b/temporary_pofol/index.html
@@ -134,7 +134,7 @@
             <h3>Contents Design</h3>
             <p>프로모션 페이지</p>
             <p>상세 페이지</p>
-            <a href="contents_design.html" target="_blank">작업물 보기</a>
+            <a href="contents_design.html">작업물 보기</a>
           </div>
         </div>
         <div class="pofol-cont sd">
